cs101_information_objects.nim


proc StepCommandWithCP56Time2a_destroy*(self: StepCommand) {.
    importc: "StepCommandWithCP56Time2a_destroy",  cdecl.}
proc StepCommandWithCP56Time2a_create*(self: StepCommandWithCP56Time2a; ioa: cint;
                                      command: StepCommandValue;
                                      selectCommand: bool; qu: cint;
                                      timestamp: CP56Time2a): StepCommandWithCP56Time2a {.
    importc: "StepCommandWithCP56Time2a_create",  cdecl.}
proc StepCommandWithCP56Time2a_getQU*(self: StepCommandWithCP56Time2a): cint {.
    importc: "StepCommandWithCP56Time2a_getQU",  cdecl.}
proc StepCommandWithCP56Time2a_getState*(self: StepCommandWithCP56Time2a): StepCommandValue {.
    importc: "StepCommandWithCP56Time2a_getState",  cdecl.}
proc StepCommandWithCP56Time2a_isSelect*(self: StepCommandWithCP56Time2a): bool {.
    importc: "StepCommandWithCP56Time2a_isSelect",  cdecl.}
proc StepCommandWithCP56Time2a_getTimestamp*(self: StepCommandWithCP56Time2a): CP56Time2a {.
    importc: "StepCommandWithCP56Time2a_getTimestamp",  cdecl.}
## *********************************************************************
##  SetpointCommandNormalizedWithCP56Time2a : SetpointCommandNormalized
## ********************************************************************

type
  SetpointCommandNormalizedWithCP56Time2a* = ptr sSetpointCommandNormalizedWithCP56Time2a

proc SetpointCommandNormalizedWithCP56Time2a_destroy*(
    self: SetpointCommandNormalizedWithCP56Time2a) {.
    importc: "SetpointCommandNormalizedWithCP56Time2a_destroy",  cdecl.}
proc SetpointCommandNormalizedWithCP56Time2a_create*(
    self: SetpointCommandNormalizedWithCP56Time2a; ioa: cint; value: cfloat;
    selectCommand: bool; ql: cint; timestamp: CP56Time2a): SetpointCommandNormalizedWithCP56Time2a {.
    importc: "SetpointCommandNormalizedWithCP56Time2a_create",  cdecl.}
proc SetpointCommandNormalizedWithCP56Time2a_getValue*(
    self: SetpointCommandNormalizedWithCP56Time2a): cfloat {.
    importc: "SetpointCommandNormalizedWithCP56Time2a_getValue",  cdecl.}
proc SetpointCommandNormalizedWithCP56Time2a_getQL*(
    self: SetpointCommandNormalizedWithCP56Time2a): cint {.
    importc: "SetpointCommandNormalizedWithCP56Time2a_getQL",  cdecl.}
proc SetpointCommandNormalizedWithCP56Time2a_isSelect*(
    self: SetpointCommandNormalizedWithCP56Time2a): bool {.
    importc: "SetpointCommandNormalizedWithCP56Time2a_isSelect",  cdecl.}
proc SetpointCommandNormalizedWithCP56Time2a_getTimestamp*(
    self: SetpointCommandNormalizedWithCP56Time2a): CP56Time2a {.
    importc: "SetpointCommandNormalizedWithCP56Time2a_getTimestamp",
     cdecl.}
## *********************************************************************
##  SetpointCommandScaledWithCP56Time2a : SetpointCommandScaled
## ********************************************************************

type
  SetpointCommandScaledWithCP56Time2a* = ptr sSetpointCommandScaledWithCP56Time2a

proc SetpointCommandScaledWithCP56Time2a_destroy*(
    self: SetpointCommandScaledWithCP56Time2a) {.
    importc: "SetpointCommandScaledWithCP56Time2a_destroy",  cdecl.}
proc SetpointCommandScaledWithCP56Time2a_create*(
    self: SetpointCommandScaledWithCP56Time2a; ioa: cint; value: cint;
    selectCommand: bool; ql: cint; timestamp: CP56Time2a): SetpointCommandScaledWithCP56Time2a {.
    importc: "SetpointCommandScaledWithCP56Time2a_create",  cdecl.}
proc SetpointCommandScaledWithCP56Time2a_getValue*(
    self: SetpointCommandScaledWithCP56Time2a): cint {.
    importc: "SetpointCommandScaledWithCP56Time2a_getValue",  cdecl.}
proc SetpointCommandScaledWithCP56Time2a_getQL*(
    self: SetpointCommandScaledWithCP56Time2a): cint {.
    importc: "SetpointCommandScaledWithCP56Time2a_getQL",  cdecl.}
proc SetpointCommandScaledWithCP56Time2a_isSelect*(
    self: SetpointCommandScaledWithCP56Time2a): bool {.
    importc: "SetpointCommandScaledWithCP56Time2a_isSelect",  cdecl.}
proc SetpointCommandScaledWithCP56Time2a_getTimestamp*(
    self: SetpointCommandScaledWithCP56Time2a): CP56Time2a {.
    importc: "SetpointCommandScaledWithCP56Time2a_getTimestamp",  cdecl.}
## *********************************************************************
##  SetpointCommandShortWithCP56Time2a : SetpointCommandShort
## ********************************************************************

type
  SetpointCommandShortWithCP56Time2a* = ptr sSetpointCommandShortWithCP56Time2a

proc SetpointCommandShortWithCP56Time2a_destroy*(
    self: SetpointCommandShortWithCP56Time2a) {.
    importc: "SetpointCommandShortWithCP56Time2a_destroy",  cdecl.}
proc SetpointCommandShortWithCP56Time2a_create*(
    self: SetpointCommandShortWithCP56Time2a; ioa: cint; value: cfloat;
    selectCommand: bool; ql: cint; timestamp: CP56Time2a): SetpointCommandShortWithCP56Time2a {.
    importc: "SetpointCommandShortWithCP56Time2a_create",  cdecl.}
proc SetpointCommandShortWithCP56Time2a_getValue*(
    self: SetpointCommandShortWithCP56Time2a): cfloat {.
    importc: "SetpointCommandShortWithCP56Time2a_getValue",  cdecl.}
proc SetpointCommandShortWithCP56Time2a_getQL*(
    self: SetpointCommandShortWithCP56Time2a): cint {.
    importc: "SetpointCommandShortWithCP56Time2a_getQL",  cdecl.}
proc SetpointCommandShortWithCP56Time2a_isSelect*(
    self: SetpointCommandShortWithCP56Time2a): bool {.
    importc: "SetpointCommandShortWithCP56Time2a_isSelect",  cdecl.}
proc SetpointCommandShortWithCP56Time2a_getTimestamp*(
    self: SetpointCommandShortWithCP56Time2a): CP56Time2a {.
    importc: "SetpointCommandShortWithCP56Time2a_getTimestamp",  cdecl.}
## ******************************************************
##  Bitstring32CommandWithCP56Time2a: Bitstring32Command
## *****************************************************

type
  Bitstring32CommandWithCP56Time2a* = ptr sBitstring32CommandWithCP56Time2a

proc Bitstring32CommandWithCP56Time2a_create*(
    self: Bitstring32CommandWithCP56Time2a; ioa: cint; value: uint32_t;
    timestamp: CP56Time2a): Bitstring32CommandWithCP56Time2a {.
    importc: "Bitstring32CommandWithCP56Time2a_create",  cdecl.}
proc Bitstring32CommandWithCP56Time2a_destroy*(
    self: Bitstring32CommandWithCP56Time2a) {.
    importc: "Bitstring32CommandWithCP56Time2a_destroy",  cdecl.}
proc Bitstring32CommandWithCP56Time2a_getValue*(
    self: Bitstring32CommandWithCP56Time2a): uint32_t {.
    importc: "Bitstring32CommandWithCP56Time2a_getValue",  cdecl.}
proc Bitstring32CommandWithCP56Time2a_getTimestamp*(
    self: Bitstring32CommandWithCP56Time2a): CP56Time2a {.
    importc: "Bitstring32CommandWithCP56Time2a_getTimestamp",  cdecl.}
## *************************************************
##  CounterInterrogationCommand : InformationObject
## ************************************************

type
  CounterInterrogationCommand* = ptr sCounterInterrogationCommand

proc CounterInterrogationCommand_create*(self: CounterInterrogationCommand;
                                        ioa: cint; qcc: QualifierOfCIC): CounterInterrogationCommand {.
    importc: "CounterInterrogationCommand_create",  cdecl.}
proc CounterInterrogationCommand_destroy*(self: CounterInterrogationCommand) {.
    importc: "CounterInterrogationCommand_destroy",  cdecl.}
proc CounterInterrogationCommand_getQCC*(self: CounterInterrogationCommand): QualifierOfCIC {.
    importc: "CounterInterrogationCommand_getQCC",  cdecl.}
## ************************************************
##  TestCommand : InformationObject
## **********************************************

type
  TestCommand* = ptr sTestCommand

proc TestCommand_create*(self: TestCommand): TestCommand {.
    importc: "TestCommand_create",  cdecl.}
proc TestCommand_destroy*(self: TestCommand) {.importc: "TestCommand_destroy",
     cdecl.}
proc TestCommand_isValid*(self: TestCommand): bool {.importc: "TestCommand_isValid",
     cdecl.}
## ************************************************
##  ResetProcessCommand : InformationObject
## **********************************************

type
  ResetProcessCommand* = ptr sResetProcessCommand

proc ResetProcessCommand_create*(self: ResetProcessCommand; ioa: cint;
                                qrp: QualifierOfRPC): ResetProcessCommand {.
    importc: "ResetProcessCommand_create",  cdecl.}
proc ResetProcessCommand_destroy*(self: ResetProcessCommand) {.
    importc: "ResetProcessCommand_destroy",  cdecl.}
proc ResetProcessCommand_getQRP*(self: ResetProcessCommand): QualifierOfRPC {.
    importc: "ResetProcessCommand_getQRP",  cdecl.}
## ************************************************
##  DelayAcquisitionCommand : InformationObject
## **********************************************

type
  DelayAcquisitionCommand* = ptr sDelayAcquisitionCommand

proc DelayAcquisitionCommand_create*(self: DelayAcquisitionCommand; ioa: cint;
                                    delay: CP16Time2a): DelayAcquisitionCommand {.
    importc: "DelayAcquisitionCommand_create",  cdecl.}
proc DelayAcquisitionCommand_destroy*(self: DelayAcquisitionCommand) {.
    importc: "DelayAcquisitionCommand_destroy",  cdecl.}
proc DelayAcquisitionCommand_getDelay*(self: DelayAcquisitionCommand): CP16Time2a {.
    importc: "DelayAcquisitionCommand_getDelay",  cdecl.}
## ******************************************
##  EndOfInitialization : InformationObject
## *****************************************

type
  EndOfInitialization* = ptr sEndOfInitialization

proc EndOfInitialization_create*(self: EndOfInitialization; coi: uint8_t): EndOfInitialization {.
    importc: "EndOfInitialization_create",  cdecl.}
proc EndOfInitialization_destroy*(self: EndOfInitialization) {.
    importc: "EndOfInitialization_destroy",  cdecl.}
proc EndOfInitialization_getCOI*(self: EndOfInitialization): uint8_t {.
    importc: "EndOfInitialization_getCOI",  cdecl.}
## ******************************************
##  FileReady : InformationObject
## *****************************************
## *
##  \name CS101_NOF
##
##  \brief NOF (Name of file) values
##
##  @{
##

const
  CS101_NOF_TRANSPARENT_FILE* = 1
  CS101_NOF_DISTURBANCE_DATA* = 2
  CS101_NOF_SEQUENCES_OF_EVENTS* = 3
  CS101_NOF_SEQUENCES_OF_ANALOGUE_VALUES* = 4

## * @}
## *
##  \name CS101_SCQ
##
##  \brief SCQ (select and call qualifier) values
##
##  @{
##

const
  CS101_SCQ_DEFAULT* = 0
  CS101_SCQ_SELECT_FILE* = 1
  CS101_SCQ_REQUEST_FILE* = 2
  CS101_SCQ_DEACTIVATE_FILE* = 3
  CS101_SCQ_DELETE_FILE* = 4
  CS101_SCQ_SELECT_SECTION* = 5
  CS101_SCQ_REQUEST_SECTION* = 6
  CS101_SCQ_DEACTIVATE_SECTION* = 7

## * @}
## *
##  \name CS101_LSQ
##
##  \brief LSQ (last section or segment qualifier) values
##
##  @{
##

const
  CS101_LSQ_NOT_USED* = 0
  CS101_LSQ_FILE_TRANSFER_WITHOUT_DEACT* = 1
  CS101_LSQ_FILE_TRANSFER_WITH_DEACT* = 2
  CS101_LSQ_SECTION_TRANSFER_WITHOUT_DEACT* = 3
  CS101_LSQ_SECTION_TRANSFER_WITH_DEACT* = 4

## * @}
## *
##  \name CS101_AFQ
##
##  \brief AFQ (Acknowledge file or section qualifier) values
##
##  @{
##
## * \brief AFQ not used

const
  CS101_AFQ_NOT_USED* = 0

## * \brief acknowledge file positively

const
  CS101_AFQ_POS_ACK_FILE* = 1

## * \brief acknowledge file negatively

const
  CS101_AFQ_NEG_ACK_FILE* = 2

## * \brief acknowledge section positively

const
  CS101_AFQ_POS_ACK_SECTION* = 3

## * \brief acknowledge section negatively

const
  CS101_AFQ_NEG_ACK_SECTION* = 4

## * @}
## *
##  \name CS101_FILE_ERROR
##
##  \brief Error code values used by FileACK
##
##  @{
##
## * \brief no error

const
  CS101_FILE_ERROR_DEFAULT* = 0

## * \brief requested memory not available (not enough memory)

const
  CS101_FILE_ERROR_REQ_MEMORY_NOT_AVAILABLE* = 1

## * \brief checksum test failed

const
  CS101_FILE_ERROR_CHECKSUM_FAILED* = 2

## * \brief unexpected communication service

const
  CS101_FILE_ERROR_UNEXPECTED_COMM_SERVICE* = 3

## * \brief unexpected name of file

const
  CS101_FILE_ERROR_UNEXPECTED_NAME_OF_FILE* = 4

## * \brief unexpected name of section

const
  CS101_FILE_ERROR_UNEXPECTED_NAME_OF_SECTION* = 5
